# whitebox_evals

./: .gitignore  Makefile  README.md  analyze_data.ipynb  analyze_logit_lens.ipynb  analyze_steering_vector_data.ipynb  analyze_steering_vectors.ipynb  attribution_experiment.py  attribution_testing.ipynb  cot_analysis.ipynb  data_setup.py  dataset_testing.ipynb  diff_testing.py  diff_training.py  gh200_pyproject.toml  html_workaround.ipynb  html_workaround_prompts.ipynb  intervention_testing.ipynb  kl_div_notebook.ipynb  logit_lens_testing_kl.ipynb  make_predictions.ipynb  new_data_vis.ipynb  orthogonalize.ipynb  paper_graphing.ipynb  pyproject.toml  requirements.txt  tokenizer_test.ipynb  vector_tests.ipynb  view.ipynb  view_data.ipynb  view_feature_acts.ipynb  view_mmlu.ipynb  view_pickle.ipynb
configs/: base_experiment.yaml  base_experiment_anthropic_eval.yaml  base_experiment_cot.yaml  base_experiment_intervention.yaml  base_experiment_politics.yaml  default.yaml  kl_div_experiment.yaml  openrouter_experiment.yaml  openrouter_experiment_high_bar.yaml  openrouter_experiment_low_bar_cot.yaml
dist_training_experiments/: diff_training.py  diff_training_ood.py  diff_training_ood_matching.py  diff_training_ood_matching_histogram.py  view_mse_bl.py
max_acts/: upload.ipynb
mypkg/: attrib_runner.py  eval_config.py  inference_runner.py  main_paper_dataset.py  mmlu_eval.py  vllm_inference.py  vllm_inference_cot.py
mypkg/whitebox_infra/: attribution.py  data_utils.py  generate_max_acts.py  interp_utils.py  intervention_hooks.py  logit_lens.py  model_utils.py
prompts/: microsoft.txt
prompts/anti_bias_statements/: v2.txt  v3.txt
prompts/generated_anti_bias_statements/: o1_pro_anti_bias_statements.json  populate_prompt_files.py  v1.txt  v10.txt  v11.txt  v12.txt  v13.txt  v14.txt  v15.txt  v16.txt  v17.txt  v18.txt  v19.txt  v2.txt  v20.txt  v3.txt  v4.txt  v5.txt  v6.txt  (+3 more)
testing_notebooks/: jank_html_stuff.ipynb  sae_test.ipynb
tests/: test_ablations.py  test_attrib.py  test_data_pipeline.py  test_forward_pass.py  test_interventions.py  test_openrouter.py  utils.py
(+20 files in other folders)
