[project]
name = "mypkg"
version = "0.0.1"
description = "Sample repository using Apollo best engineering practices"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic",
    "wandb",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "openai",
    "pandas",
    "tabulate",
    "einops",
    "circuitsvis>=1.43.3",
    "jaxtyping",
    "accelerate>=1.0.1",
    "black>=25.1.0",
    "datasets>=3.1.0",
    "flash-attn>=2.7.0.post2",
    "huggingface-hub>=0.29.3",
    "matplotlib>=3.9.4",
    "ray>=2.43.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "torch>=2.4.1",
    "transformers==4.49.0",
    "wheel>=0.45.1",
    "xformers>=0.0.28.post1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mypkg"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["mypkg", "tests"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false
